// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not show anything if there are no expenses 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1>
        No expenses to add up
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`should not show anything when given one expense 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Viewing 
        <span>
          1
        </span>
         
        <span>
          expense
        </span>
         totalling 
        <span>
          $1.23
        </span>
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </div>
  </div>
</div>
`;

exports[`should show total of expenses when given multiple expenses 1`] = `
<div>
  <div
    className="page-header"
  >
    <div
      className="content-container"
    >
      <h1
        className="page-header__title"
      >
        Viewing 
        <span>
          10
        </span>
         
        <span>
          expenses
        </span>
         totalling 
        <span>
          $1,231.23
        </span>
      </h1>
      <div
        className="page-header__actions"
      >
        <Link
          className="button"
          replace={false}
          to="/create"
        >
          Add Expense
        </Link>
      </div>
    </div>
  </div>
</div>
`;
